# 21_school_push_swap

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  checker  ft_check_args.c  main.c  push_swap  push_swap.h  visual
includes/: push_swap.h  visual.h
minilibx_macos/: Makefile
src/: checker.c  ft_adjust_big_to_small_stack.c  ft_check_args.c  ft_check_n_write_args.c  ft_check_stack_sorted.c  ft_choose_optimal_step.c  ft_count_ra_rb.c  ft_count_rra_rrb.c  ft_count_steps.c  ft_create_cmd.c  ft_create_t_st_elem.c  ft_delete_t_steps.c  ft_draw.c  ft_draw_stacks.c  ft_find_pivot.c  ft_find_rotate_side.c  ft_free_cmd_stack.c  ft_free_push_swap_mem.c  ft_free_stack.c  ft_get_push_swap.c  ft_get_stack_back.c  ft_get_vis.c  ft_max_min_int.c  ft_min_steps_count.c  ft_move_elem_to_b.c  ft_multi_arg.c  ft_nearest_bigger_pivot.c  ft_nearest_smaller_pivot.c  ft_need_steps_to_push.c  ft_new_elem_add.c  ft_new_order_add.c  ft_one_agr.c  ft_pa_pb.c  ft_presort_stack.c  ft_print_operations.c  ft_print_stack_step.c  ft_push_tmp_to_a.c  ft_push_to_b_after_pivot.c  ft_push_to_dst_before_pivot.c  ft_ra_rb.c  (+16 more)
